# pynimate

./: .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  setup.py  sitemap.xml
.github/workflows/: deploy.yml  tests.yml
docs/: index.md
docs/guide/: customization.md  dark_mode.md  lineplot_darkmode.md  starter.md
docs/reference/: barBasic.md  barhplot.md  barplot.md  baseplot.md  canvas.md  datafier.md  lineplot.md  utils.md
docs/reference/datafiers/: bar_datafier.md  base_datafier.md  datafier.md  line_datafier.md
examples/: example1.py  example2.py  example3.py  lineplot_dark1.py  lineplot_ex1.py
examples/data/: covid_IN.csv  map.csv
guide/dark_mode/: index.html
guide/lineplot_darkmode/: index.html
guide/starter/: index.html
legacy/: pynimate-1.0.0-py3-none-any.whl
reference/barhplot/: index.html
reference/barplot/: index.html
reference/baseplot/: index.html
reference/canvas/: index.html
reference/datafier/: index.html
reference/datafiers/bar_datafier/: index.html
reference/datafiers/base_datafier/: index.html
reference/datafiers/datafier/: index.html
reference/datafiers/line_datafier/: index.html
reference/lineplot/: index.html
reference/utils/: index.html
search/: search_index.json
src/pynimate/: __init__.py  __init__.pyi  bar.py  barhplot.py  baseplot.py  canvas.py  datafier.py  lineplot.py  utils.py
tests/: conftest.py  example1.py  example2.py  example3.py  test_bar.py  test_barhplot.py  test_baseplot.py  test_datafier.py  test_lineplot.py  test_utils.py
tests/data/: data.csv  sample.csv
