# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "pynimate"
version = "1.2.0"
description = "Python package for statistical data animations"
readme = "README.md"
authors = [{ name = "julkar9", email = "julkar9dev@gmail.com" }]
license = { text = "MIT License (MIT)" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["animations", "framework", "data", "plots"]
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "seaborn",
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["black", "isort","mkdocs-material", "pip-tools", "pytest", "mkdocstrings[python]"]

[project.urls]
Homepage = "https://github.com/julkaar9/pynimate"
Documentation = "https://julkaar9.github.io/pynimate/"

 